[package]
name = "rsorm"
version = "0.1.0"
authors = ["bpopadiuk <pboris@pdx.edu>"]
edition = "2018"

[dependencies]
migrate_table = { path = "./migrate_table" }
migrate_table_derive = { path = "./migrate_table/migrate_table_derive" }

[dependencies.rusqlite]
version = "0.18.0"
features = ["bundled"]
